--- a/ERP.cbp
+++ b/ERP.cbp
@@ -36,6 +36,7 @@
 		<Unit filename="ENTIDADES/USUARIOS.h" />
 		<Unit filename="ENTIDADES/USUARIO_LOGADO.h" />
 		<Unit filename="ENTIDADES/ITENSPEDIDO.h" />
+		<Unit filename="ENTIDADES/CLIENTES.h" />
 		<Unit filename="Servicos/Servicos.h" />
 		<Unit filename="Servicos/Alfabeto.h" />
 		<Unit filename="VIEW/Menu.h" />
