--- a/ERP.cbp
+++ b/ERP.cbp
@@ -39,6 +39,7 @@
 		<Unit filename="ENTIDADES/CLIENTES.h" />
 		<Unit filename="Servicos/Servicos.h" />
 		<Unit filename="Servicos/Alfabeto.h" />
+		<Unit filename="Servicos/Data.h" />
 		<Unit filename="VIEW/Menu.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
